<resources>
    <string
            name="app_name"
            translatable="false">Pixel Launcher Enhanced</string>
    <string
            name="app_name_shortened"
            translatable="false">PLEnhanced</string>
    <string name="app_motto">Unleash the full potential of your launcher</string>

    <string name="icon">Icon</string>
    <string name="more">More</string>
    <string name="exit">Exit</string>
    <string name="learn_more">Learn more</string>
    <string name="attention">Attention</string>
    <string name="opt_default">(Default)</string>
    <string
            name="opt_selected1"
            translatable="false">%s</string>
    <string
            name="opt_selected2"
            translatable="false">%1$s%2$s</string>
    <string
            name="opt_selected3"
            translatable="false">%1$s%2$s %3$s</string>
    <string name="btn_pick_image">Pick image</string>
    <string name="understood">Understood</string>
    <string name="settings_title">Settings</string>
    <string name="search_hint">Search…</string>

    <string name="root_connection_failed_title">Root connection failed</string>
    <string name="root_connection_failed_desc">Unable to connect to root service. Please grant root access and try again.</string>
    <string name="lsposed_warn">Enable this module from LSPosed and force close launcher.</string>
    <string name="lsposed_bootloop_warn">One of the features you enabled is not compatible with this version of launcher. Please disable it and force close launcher.</string>
    <string name="xposed_module_disabled_title">Module not activated</string>
    <string name="xposed_module_disabled_desc">System service not running</string>
    <string name="xposed_module_bootlooped_title">Bootloop detected</string>
    <string name="xposed_module_bootlooped_desc">Module has been disabled</string>
    <string name="force_close_launcher">Force close launcher</string>

    <string
            name="version_codes"
            translatable="false">%s (#%d)</string>
    <string name="news">News</string>
    <string name="support">Support</string>
    <string name="github">GitHub</string>
    <string
            name="dev_name"
            translatable="false">DrDisagree</string>
    <string name="dev_bio">Learner | Developer | Designer</string>
    <string name="buymeacoffee_title">Enjoying this app?</string>
    <string name="buymeacoffee_desc">Consider buying me a coffee</string>

    <string name="fragment_icons_title">Icons</string>
    <string name="fragment_icons_desc">Set icon size and more</string>
    <string name="fragment_home_screen_title">Home screen</string>
    <string name="fragment_home_screen_desc">Set Google now panel and more</string>
    <string name="fragment_app_drawer_title">App drawer</string>
    <string name="fragment_app_drawer_desc">Customize your app drawer</string>
    <string name="fragment_recents_title">Recents</string>
    <string name="fragment_recents_desc">Revamp the overview screen</string>
    <string name="fragment_miscellaneous_title">Miscellaneous</string>
    <string name="fragment_miscellaneous_desc">Other useful options</string>
    <string name="fragment_about_title">About</string>
    <string name="fragment_about_desc">About this application</string>
    <string name="fragment_hidden_apps_title">Hide apps</string>

    <string name="force_themed_icons_title">Force themed icons</string>
    <string name="force_themed_icons_desc">Generate monochromatic icons if not provided by the app</string>
    <string name="remove_shortcut_badge_title">Remove shortcut icon badge</string>
    <string name="launcher_icon_size_title">Icon size</string>
    <string name="launcher_text_size_title">Text size</string>
    <string name="app_drawer_themed_icons_title">Themed icons</string>
    <string name="app_drawer_themed_icons_desc">Enable themed icons on app drawer</string>
    <string name="double_tap_to_sleep_title">Double tap to sleep</string>
    <string name="double_tap_to_sleep_desc">Double tap on home screen empty space to turn off the screen</string>
    <string name="allow_wallpaper_zooming">Wallpaper zooming</string>
    <string name="allow_wallpaper_zooming_summary">Zoom in or out the wallpaper when using drawer or recent apps</string>
    <string name="desktop_icon_labels_title">Icon labels on desktop</string>
    <string name="hide_launcher_statusbar_title">Hide statusbar</string>
    <string name="hide_launcher_statusbar_desc">Expand quick settings panel once if status bar is not hidden</string>
    <string name="hide_launcher_top_shadow_title">Hide top shadow</string>
    <string name="hide_launcher_top_shadow_desc">Remove top shadow from home screen</string>
    <string name="app_drawer_icon_labels_title">Icon labels in app drawer</string>
    <string name="disable_recents_live_tile_title">Disable recents live tile</string>
    <string name="disable_recents_live_tile_desc">Disable live tile if recents screen is buggy</string>
    <string name="hide_at_a_glance_title">Hide At A Glance</string>
    <string name="hide_at_a_glance_desc">Hide at a glance from home screen</string>
    <string name="hide_desktop_search_bar_title">Hide desktop search bar</string>
    <string name="hide_desktop_search_bar_desc">Hide search bar from desktop dock</string>
    <string name="dock_spacing_title">Dock spacing</string>
    <string name="app_drawer_background_opacity_title">App drawer background opacity</string>
    <string name="recents_background_opacity_title">Recents background opacity</string>
    <string name="restart_launcher_title">Restart</string>
    <string name="restart_launcher_desc">Restart the launcher manually to apply any pending settings</string>
    <string name="restarting_launcher">Restarting launcher…</string>
    <string name="developer_options_title">Developer options</string>
    <string name="developer_options_desc">Enable hidden developer options</string>
    <string name="entry_in_launcher_settings">Show entry in launcher settings</string>
    <string name="lock_layout_title">Lock layout</string>
    <string name="lock_layout_desc_on">Icons and widgets can\'t be added, removed and moved on the homescreen</string>
    <string name="lock_layout_desc_off">Icons and widgets can be added, removed and moved on the homescreen</string>
    <string name="layout_is_locked">Layout is locked!</string>
    <string name="drawer_search_title">App search bar</string>
    <string name="drawer_search_desc">Search bar on top of the app drawer</string>
    <string name="clear_all_button_title">Clear all button</string>
    <string name="fixed_button_width_title">Fixed width for each button</string>
    <string name="recents_remove_screenshot_title">Remove screenshot button</string>
    <string name="recents_remove_screenshot_summary">Hides the screenshot button in the recent apps overview</string>
    <string name="start_freeform_mode_title">Choose the way to start Freeform</string>
    <string name="start_freeform_mode_summary">Pls change it till work on your ROMs</string>
    <string name="start_freeform_gesture_title">Start Freeform in Recents View by gesture</string>
    <string name="start_freeform_gesture_progress_title">Set the key value where you set off your gesture</string>
    <string name="freeform_mode_dialog_title">Choose the implement of freeform</string>
    <string name="recents_clear_all">Clear all</string>
    <string name="homescreen_columns_title">Homescreen columns</string>
    <string name="homescreen_rows_title">Homescreen rows</string>
    <string name="app_drawer_columns_title">App drawer columns</string>
    <string name="app_drawer_row_height_multiplier_title">Row height multiplier</string>
    <string name="hide_apps_title">Hide apps from app drawer</string>
    <string name="search_hidden_apps_title">Allow searching for hidden apps</string>
    <string name="section_general_title">General</string>
    <string name="section_icon_colors_title">Icon colors</string>
    <string name="section_interface_title">Interface</string>
    <string name="section_search_bar_title">Search bar</string>
    <string name="section_quickspace_title">Quickspace</string>
    <string name="custom_themed_icon_color_title">Custom themed icon color</string>
    <string name="icon_foreground_color_light_title">Foreground color in light mode</string>
    <string name="icon_background_color_light_title">Background color in light mode</string>
    <string name="icon_foreground_color_dark_title">Foreground color in dark mode</string>
    <string name="icon_background_color_dark_title">Background color in dark mode</string>
    <string name="folder_color_light_title">Folder color in light mode</string>
    <string name="folder_color_dark_title">Folder color in dark mode</string>
    <string name="search_bar_opacity_title">Search bar opacity</string>
    
    <string-array name="freeform_mode_str">
        <item>AOSP Origin</item>
        <item>sunshine mifreeform</item>
        <item>LMO</item>
        <item>YAMF</item>
    </string-array>
    <string-array name="freeform_mode_value">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
    </string-array>
    
</resources>
