<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.pixellauncherenhanced.ui.preferences.HookCheckPreference
        android:key="xposed_hook_check"
        android:layout="@layout/view_xposed_hook_check"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_icons"
        android:key="launcherIcons"
        android:summary="@string/fragment_icons_desc"
        android:title="@string/fragment_icons_title"
        app:fragment="com.drdisagree.pixellauncherenhanced.ui.fragments.IconsMods"
        app:showArrow="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_home_screen"
        android:key="launcherHomeScreen"
        android:summary="@string/fragment_home_screen_desc"
        android:title="@string/fragment_home_screen_title"
        app:fragment="com.drdisagree.pixellauncherenhanced.ui.fragments.HomeScreenMods"
        app:showArrow="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_app_drawer"
        android:key="launcherAppDrawer"
        android:summary="@string/fragment_app_drawer_desc"
        android:title="@string/fragment_app_drawer_title"
        app:fragment="com.drdisagree.pixellauncherenhanced.ui.fragments.AppDrawerMods"
        app:showArrow="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_recents"
        android:key="launcherRecents"
        android:summary="@string/fragment_recents_desc"
        android:title="@string/fragment_recents_title"
        app:fragment="com.drdisagree.pixellauncherenhanced.ui.fragments.RecentsMods"
        app:showArrow="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_miscellaneous"
        android:key="launcherMiscellaneous"
        android:summary="@string/fragment_miscellaneous_desc"
        android:title="@string/fragment_miscellaneous_title"
        app:fragment="com.drdisagree.pixellauncherenhanced.ui.fragments.MiscellaneousMods"
        app:showArrow="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_about"
        android:key="launcherAbout"
        android:summary="@string/fragment_about_desc"
        android:title="@string/fragment_about_title"
        app:fragment="com.drdisagree.pixellauncherenhanced.ui.fragments.About"
        app:showArrow="false" />

</PreferenceScreen>