<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:key="xposed_appdrawerthemedicons"
        android:summary="@string/app_drawer_themed_icons_desc"
        android:title="@string/app_drawer_themed_icons_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:defaultValue="true"
        android:key="xposed_drawersearchbar"
        android:summary="@string/drawer_search_desc"
        android:title="@string/drawer_search_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:defaultValue="true"
        android:key="xposed_appdrawericonlabels"
        android:title="@string/app_drawer_icon_labels_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
        android:key="launcherHiddenApps"
        android:title="@string/hide_apps_title"
        app:fragment="com.drdisagree.pixellauncherenhanced.ui.fragments.HiddenApps"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SliderPreference
        android:key="xposed_appdrawerbackgroundopacity"
        android:title="@string/app_drawer_background_opacity_title"
        app:defaultValue="100"
        app:iconSpaceReserved="false"
        app:maxVal="100"
        app:minVal="0"
        app:tickInterval="1"
        app:valueFormat="%" />

</PreferenceScreen>