<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:key="xposed_recentsclearallbutton"
        android:title="@string/clear_all_button_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:key="xposed_fixedrecentsbuttonswidth"
        android:title="@string/fixed_button_width_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:key="xposed_recentsremovescreenshotbutton"
        android:title="@string/recents_remove_screenshot_title"
        android:summary="@string/recents_remove_screenshot_summary"
        android:defaultValue="false"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:key="xposed_disablerecentslivetile"
        android:summary="@string/disable_recents_live_tile_desc"
        android:title="@string/disable_recents_live_tile_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SliderPreference
        android:key="xposed_recentsbackgroundopacity"
        android:title="@string/recents_background_opacity_title"
        app:defaultValue="-1"
        app:hideValueOnDefault="true"
        app:iconSpaceReserved="false"
        app:maxVal="100"
        app:minVal="-1"
        app:showDefaultIndicator="true"
        app:showResetButton="true"
        app:tickInterval="1"
        app:valueFormat="%" />

</PreferenceScreen>