<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:defaultValue="true"
        android:key="xposed_entryinlaunchersettings"
        android:title="@string/entry_in_launcher_settings"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:key="xposed_developeroptions"
        android:summary="@string/developer_options_desc"
        android:title="@string/developer_options_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
        android:key="xposed_restartlauncher"
        android:summary="@string/restart_launcher_desc"
        android:title="@string/restart_launcher_title"
        app:iconSpaceReserved="false"
        app:showArrow="false" />

</PreferenceScreen>