<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:key="xposed_forcethemedicons"
        android:summary="@string/force_themed_icons_desc"
        android:title="@string/force_themed_icons_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
        android:key="xposed_removeiconbadge"
        android:title="@string/remove_shortcut_badge_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SliderPreference
        android:key="xposed_launchericonsize"
        android:title="@string/launcher_icon_size_title"
        app:defaultValue="100"
        app:iconSpaceReserved="false"
        app:maxVal="150"
        app:minVal="50"
        app:showDefaultIndicator="true"
        app:hideValueOnDefault="true"
        app:showResetButton="true"
        app:tickInterval="1"
        app:valueFormat="%" />

    <com.drdisagree.pixellauncherenhanced.ui.preferences.SliderPreference
        android:key="xposed_launchertextsize"
        android:title="@string/launcher_text_size_title"
        app:defaultValue="100"
        app:iconSpaceReserved="false"
        app:maxVal="150"
        app:minVal="50"
        app:showDefaultIndicator="true"
        app:hideValueOnDefault="true"
        app:showResetButton="true"
        app:tickInterval="1"
        app:valueFormat="%" />

</PreferenceScreen>