<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background_material_error"
    android:clickable="true">

    <ImageView
        android:id="@+id/module_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_xposed_disabled"
        app:tint="?colorOnError" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="16dp"
        android:layout_toStartOf="@id/btn_more"
        android:layout_toEndOf="@id/module_icon"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xposed_module_disabled_title"
            android:textColor="?colorOnError" />

        <TextView
            android:id="@+id/summary"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:text="@string/xposed_module_disabled_desc"
            android:textColor="?colorOnError" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="24dp"
        android:backgroundTint="?attr/colorErrorContainer"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/more"
        android:textColor="?attr/colorOnErrorContainer" />

</RelativeLayout>